--- a/ImageOperator/ImageOperator.csproj
+++ b/ImageOperator/ImageOperator.csproj
@@ -26,5 +26,11 @@
         <PackageReference Include="DotNet.Bundle" Version="0.9.13" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+        <PackageReference Include="Weikio.PluginFramework.AspNetCore" Version="1.5.1" />
+    </ItemGroup>
+
+
+    <ItemGroup>
+      <ProjectReference Include="..\ImageOperator.Core\ImageOperator.Core.csproj" />
     </ItemGroup>
 </Project>
