--- a/ImageOperator.Core/ImageOperator.Core.csproj
+++ b/ImageOperator.Core/ImageOperator.Core.csproj
@@ -1,9 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>netstandard2.1</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <LangVersion>10</LangVersion>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="OpenCvSharp4" Version="4.8.0.20230708" />
+      <PackageReference Include="OpenCvSharp4.Extensions" Version="4.8.0.20230708" />
+    </ItemGroup>
 
 </Project>
