--- a/ImageOperator/ImageOperator.csproj
+++ b/ImageOperator/ImageOperator.csproj
@@ -23,6 +23,11 @@
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.5" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.5" />
+        <PackageReference Include="AvaloniaAccordion" Version="1.0.0" />
+        <PackageReference Include="Dock.Avalonia" Version="11.0.0.3" />
+        <PackageReference Include="Dock.Model.Avalonia" Version="11.0.0.3" />
+        <PackageReference Include="Dock.Model.Mvvm" Version="11.0.0.3" />
+        <PackageReference Include="Dock.Serializer" Version="11.0.0.3" />
         <PackageReference Include="DotNet.Bundle" Version="0.9.13" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
